[gd_scene load_steps=38 format=3 uid="uid://dofu8ik7dtua1"]

[ext_resource type="Script" path="res://assets/scenes/game_scene.gd" id="1_jdhth"]
[ext_resource type="Shader" path="res://assets/shaders/back_layer.gdshader" id="2_d1sjh"]
[ext_resource type="PackedScene" uid="uid://dpmf4snl7yob2" path="res://assets/objects/world/effects/effect_sprite.tscn" id="3_k32od"]
[ext_resource type="AudioStream" uid="uid://dqqgsvp4lycgf" path="res://assets/sounds/break.wav" id="4_0vcd0"]
[ext_resource type="PackedScene" uid="uid://celyk57ifua4f" path="res://assets/objects/world/game_world.tscn" id="4_3hdty"]
[ext_resource type="AudioStream" uid="uid://y6i3cpd0jrtq" path="res://assets/sounds/place.wav" id="5_tjk8f"]
[ext_resource type="AudioStream" uid="uid://b4cmkbpom8cq5" path="res://assets/sounds/select_item.wav" id="6_hvwkn"]
[ext_resource type="Script" path="res://assets/objects/world/game_input_manager.gd" id="6_ly1vx"]
[ext_resource type="Script" path="res://assets/objects/world/world_sound.gd" id="6_vw555"]
[ext_resource type="AudioStream" uid="uid://brbqcbn1rbycl" path="res://assets/sounds/spring.wav" id="7_4iqqu"]
[ext_resource type="AudioStream" uid="uid://dvbsibgabi3ju" path="res://assets/sounds/select_page.wav" id="7_4wp1w"]
[ext_resource type="Script" path="res://assets/objects/world/block/render/block_world_renderer.gd" id="7_ddnpg"]
[ext_resource type="Texture2D" uid="uid://cp72tkpjo3i8g" path="res://assets/textures/menu/cursor/cursor.png" id="8_eu242"]
[ext_resource type="PackedScene" uid="uid://qnuf5qyuxwxp" path="res://assets/objects/world/block/render/block_particle.tscn" id="8_in2xm"]
[ext_resource type="Script" path="res://assets/objects/game_parallax.gd" id="8_iq1gn"]
[ext_resource type="Texture2D" uid="uid://gf2qt8h32r84" path="res://assets/textures/menu/cursor/cursor_disabled.png" id="9_abmcf"]
[ext_resource type="Shader" path="res://assets/shaders/screen_display.gdshader" id="9_owgvs"]
[ext_resource type="PackedScene" uid="uid://c587sy0idbcjt" path="res://assets/objects/menu/hud/hud.tscn" id="10_0vvsh"]
[ext_resource type="Script" path="res://assets/objects/world/screen_display.gd" id="10_5ifsx"]
[ext_resource type="Shader" path="res://assets/shaders/light_canvas.gdshader" id="10_nih1y"]
[ext_resource type="Script" path="res://assets/objects/game_packet_manager.gd" id="10_wvv0v"]
[ext_resource type="Script" path="res://assets/objects/world/item_select_manager.gd" id="22_3doeq"]
[ext_resource type="Script" path="res://assets/objects/world/light_viewport.gd" id="23_v3cug"]
[ext_resource type="PackedScene" uid="uid://cxb4wscykm2ga" path="res://assets/objects/menu/button_cursor.tscn" id="24_21t63"]
[ext_resource type="Script" path="res://assets/objects/world/entity/player/player_camera.gd" id="24_vgm8j"]
[ext_resource type="Script" path="res://assets/objects/world/cursor_manager.gd" id="25_0oamt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7e7ej"]
shader = ExtResource("2_d1sjh")
shader_parameter/back_shade = 0.2
shader_parameter/shadow_shade = 0.2

[sub_resource type="Resource" id="Resource_3wuox"]
script = ExtResource("6_vw555")
sound_name = "spring"
sound_stream = ExtResource("7_4iqqu")

[sub_resource type="Gradient" id="Gradient_p272a"]
offsets = PackedFloat32Array(0, 0.5, 1, 0)
colors = PackedColorArray(0.13583, 0.0257736, 0.20906, 1, 0.18053, 0.321128, 0.573004, 1, 0, 0.705882, 0.811765, 1, 0.6, 1, 0.966667, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rhksf"]
gradient = SubResource("Gradient_p272a")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_ma17v"]
resource_name = "new_animation"
length = 1.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:texture:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [PackedColorArray(0.0767, 0.290575, 0.59, 1, 0, 0.705882, 0.811765, 1, 0.6, 1, 0.966667, 1), PackedColorArray(0.55, 0, 0.201667, 1, 0.78, 0.27222, 0.0546, 1, 1, 0.7165, 0.19, 1), PackedColorArray(0, 0, 0, 1, 0.0257308, 0.0114208, 0.0956682, 1, 0.0887279, 0.0823582, 0.25183, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../ScreenDisplay:material:shader_parameter/sunlight_shade")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.89, 0.654002, 0.5073, 1), Color(0.2373, 0.189, 0.35, 1)]
}

[sub_resource type="Animation" id="Animation_b7pq7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:texture:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedColorArray(0.13583, 0.0257736, 0.20906, 1, 0.18053, 0.321128, 0.573004, 1, 0, 0.705882, 0.811765, 1, 0.6, 1, 0.966667, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../ScreenDisplay:material:shader_parameter/sunlight_shade")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2hr1k"]
_data = {
"RESET": SubResource("Animation_b7pq7"),
"new_animation": SubResource("Animation_ma17v")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jutqc"]
streams_count = 1
stream_0/stream = ExtResource("6_hvwkn")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4mcqp"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("7_4wp1w")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qaax0"]
shader = ExtResource("10_nih1y")
shader_parameter/sunlight_range = 12
shader_parameter/block_light_range = 16
shader_parameter/heightmap = PackedInt32Array()
shader_parameter/top_height = -1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_llwcc"]
shader = ExtResource("9_owgvs")
shader_parameter/sample_round = 0.25
shader_parameter/light_overflow = 0.25
shader_parameter/sunlight_shade = Color(1, 1, 1, 1)

[node name="GameScene" type="Node2D" node_paths=PackedStringArray("world", "blocks_renderer", "hud", "player_camera", "light_viewport", "screen_display", "packet_manager", "input_manager", "item_select_manager", "cursor_manager", "particles", "foreground_viewport", "shadow_viewport")]
script = ExtResource("1_jdhth")
world = NodePath("ForegroundViewport/GameWorld")
blocks_renderer = NodePath("ForegroundViewport/BlockWorldRenderer")
hud = NodePath("UILayer/HUD")
player_camera = NodePath("ForegroundViewport/PlayerCamera")
light_viewport = NodePath("LightViewport")
screen_display = NodePath("ScreenDisplay")
packet_manager = NodePath("Managers/GamePacketManager")
input_manager = NodePath("Managers/GameInputManager")
item_select_manager = NodePath("Managers/ItemSelectManager")
cursor_manager = NodePath("Managers/CursorManager")
particles = NodePath("ForegroundViewport/Particles")
foreground_viewport = NodePath("ForegroundViewport")
shadow_viewport = NodePath("ForegroundViewport/ShadowViewport")
back_layer_shader = SubResource("ShaderMaterial_7e7ej")
effect_sprite_scene = ExtResource("3_k32od")
break_sound = ExtResource("4_0vcd0")
place_sound = ExtResource("5_tjk8f")
sounds = Array[ExtResource("6_vw555")]([SubResource("Resource_3wuox")])

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Sky" type="Node2D" parent="BackgroundLayer"]
script = ExtResource("8_iq1gn")
parallax_factor = Vector2(0, 0.5)

[node name="TextureRect" type="TextureRect" parent="BackgroundLayer/Sky"]
offset_top = -128.0
offset_right = 1024.0
offset_bottom = 896.0
texture = SubResource("GradientTexture2D_rhksf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackgroundLayer/Sky"]
libraries = {
"": SubResource("AnimationLibrary_2hr1k")
}
autoplay = "new_animation"
speed_scale = 0.01

[node name="Managers" type="Node" parent="."]

[node name="GameInputManager" type="Node" parent="Managers" node_paths=PackedStringArray("scene")]
process_mode = 3
script = ExtResource("6_ly1vx")
scene = NodePath("../..")

[node name="GamePacketManager" type="Node" parent="Managers" node_paths=PackedStringArray("scene")]
script = ExtResource("10_wvv0v")
scene = NodePath("../..")

[node name="ItemSelectManager" type="Node" parent="Managers" node_paths=PackedStringArray("scene", "select_item_sound", "select_page_sound", "page_timer", "sound_timer")]
script = ExtResource("22_3doeq")
scene = NodePath("../..")
select_item_sound = NodePath("Sounds/SelectItem")
select_page_sound = NodePath("Sounds/SelectPage")
page_timer = NodePath("PageTimer")
sound_timer = NodePath("SoundTimer")

[node name="PageTimer" type="Timer" parent="Managers/ItemSelectManager"]
wait_time = 0.4
one_shot = true

[node name="SoundTimer" type="Timer" parent="Managers/ItemSelectManager"]
wait_time = 0.03
one_shot = true

[node name="Sounds" type="Node" parent="Managers/ItemSelectManager"]

[node name="SelectItem" type="AudioStreamPlayer" parent="Managers/ItemSelectManager/Sounds"]
stream = SubResource("AudioStreamRandomizer_jutqc")
volume_db = -10.0

[node name="SelectPage" type="AudioStreamPlayer" parent="Managers/ItemSelectManager/Sounds"]
stream = SubResource("AudioStreamRandomizer_4mcqp")
volume_db = -5.0

[node name="CursorManager" type="Node2D" parent="Managers" node_paths=PackedStringArray("scene", "button_cursor", "move_timer", "reset_timer")]
script = ExtResource("25_0oamt")
scene = NodePath("../..")
button_cursor = NodePath("ButtonCursor")
cursor_image = ExtResource("8_eu242")
cursor_disabled_image = ExtResource("9_abmcf")
move_timer = NodePath("MoveTimer")
reset_timer = NodePath("ResetTimer")

[node name="MoveTimer" type="Timer" parent="Managers/CursorManager"]
wait_time = 0.2
one_shot = true

[node name="ResetTimer" type="Timer" parent="Managers/CursorManager"]
wait_time = 2.0
one_shot = true

[node name="ButtonCursor" parent="Managers/CursorManager" instance=ExtResource("24_21t63")]
z_index = 2

[node name="LightViewport" type="SubViewport" parent="." node_paths=PackedStringArray("scene", "light_canvas")]
transparent_bg = true
size = Vector2i(2, 2)
render_target_update_mode = 4
script = ExtResource("23_v3cug")
scene = NodePath("..")
light_canvas = NodePath("LightCanvas")

[node name="LightCanvas" type="ColorRect" parent="LightViewport"]
material = SubResource("ShaderMaterial_qaax0")

[node name="ForegroundViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
render_target_update_mode = 4

[node name="PlayerPositionTimer" type="Timer" parent="ForegroundViewport"]
wait_time = 0.2
autostart = true

[node name="GameWorld" parent="ForegroundViewport" instance=ExtResource("4_3hdty")]

[node name="Particles" type="Node2D" parent="ForegroundViewport"]

[node name="PlayerCamera" type="Camera2D" parent="ForegroundViewport" node_paths=PackedStringArray("pan_timer")]
zoom = Vector2(3, 3)
process_callback = 0
position_smoothing_enabled = true
script = ExtResource("24_vgm8j")
pan_timer = NodePath("PanTimer")

[node name="PanTimer" type="Timer" parent="ForegroundViewport/PlayerCamera"]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="BlockWorldRenderer" type="Node" parent="ForegroundViewport" node_paths=PackedStringArray("world")]
script = ExtResource("7_ddnpg")
world = NodePath("../GameWorld")
particle_scene = ExtResource("8_in2xm")

[node name="ShadowViewport" type="SubViewport" parent="ForegroundViewport"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
render_target_update_mode = 4

[node name="ScreenDisplay" type="ColorRect" parent="." node_paths=PackedStringArray("foreground_viewport", "light_viewport", "world")]
material = SubResource("ShaderMaterial_llwcc")
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("10_5ifsx")
foreground_viewport = NodePath("../ForegroundViewport")
light_viewport = NodePath("../LightViewport")
world = NodePath("../ForegroundViewport/GameWorld")
metadata/_edit_use_anchors_ = true

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource("10_0vvsh")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(3, 3)

[connection signal="timeout" from="Managers/ItemSelectManager/PageTimer" to="Managers/ItemSelectManager" method="_on_item_page_timer_timeout"]
[connection signal="timeout" from="Managers/CursorManager/ResetTimer" to="Managers/CursorManager" method="_on_reset_timer_timeout"]
[connection signal="timeout" from="ForegroundViewport/PlayerPositionTimer" to="." method="_on_player_position_timer_timeout"]
